[package]
name = "nrf9160dk-blink"
version = "0.1.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "nrf9160dk-blink"
test = false
doc = false

[features]
default = []
std = [
    "drone-core/std",
    "drone-cortexm/std",
    "drone-nrf-map/std",
    "drone-nrf91-dso/std",
    "futures/std",
]

[dependencies]
drone-core = { version = "0.14.0" }
drone-cortexm = { version = "0.14.0", features = ["floating-point-unit", "memory-protection-unit", "security-extension"] }
drone-nrf-map = { version = "0.14.0" }
drone-nrf91-dso = { version = "0.14.0" }
futures = { version = "0.3.0", default-features = false }

[profile.release]
lto = true
debug = true
panic = "abort"
